# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  game_engine.py
brain_games/games/: __init__.py  calculate.py  even_odd.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
