[tool.poetry]
name = "hexlet-code"
version = "0.1.4"
description = "Brain Games"
authors = ["minami-11 <madk0te@yandex.ru>"]
readme = "README.md"
repository = "git@github.com:minami-11/python-project-49.git"
classifiers = ["Topic :: Games/Entertainment :: Fortune Cookies"]
packages = [{include = "brain_games" }]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
